2009-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilenames): Input wildcard file
	specifications with a subdirectory component such as
	"subdir/*.dpx" were not working.  Expand @filename to a list of
	arguments.

2009-05-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Debian stores Ghostscript fonts under
	/usr/share/fonts/type1/gsfonts so check there for fonts.  Issue
	reported by Ralf Wildenhues.

2009-05-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Magick.xs: Fix Ping of blob.

	* PerlMagick/t/ping.t: Added tests for pinging files and blobs.

	* www/perl.html: Ping blob syntax is like $image->Ping(blob=>@blob).

2009-05-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* version.sh: Define PACKAGE_STRING.

2009-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (HorizontalFilter, VerticalFilter): When
	resizing a non-opaque image, attenuate the influence of
	surrounding colors based on their degree of transparency in order
	to avoid "halos" around objects caused by colors which are
	transparent and therefore not part of the visible image.  Patch
	contributed by Pavel Merdin via SourceForge Tracker #2792322.

2009-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Updated libpng to 1.2.35.

	* lcms: Updated lcms to 1.18a.

2009-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/display.imdoc: Fix documentation for crop and chop keyboard
	accelerators.  Fixes SourceForge bug #2593388 "error in the
	documentation/Keyboard accelarators".

2009-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (GetImageBoundingBox): If we fail to find a
	smaller bounding box, then the returned bounding box is the entire
	image.

	* VisualMagick/bin/delegates.mgk: Remove bounding box option (-g) from
	Postscript delegate specifications.

	* config/delegates.mgk.in: Remove bounding box option (-g) from