@@ -21,6 +21,24 @@
 </tr>
 </table>
 <p>
+2009-06-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/dpx.c (WriteDPXImage): Fix leak of chroma image when
+        subsampling to 4:2:2.
+
+</UL>
+<p>
+2009-06-22  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/utility.c (ExpandFilenames): Input wildcard file
+        specifications with a subdirectory component such as
+        "subdir/*.dpx" were not working.  Expand @filename to a list of
+        arguments.
+
+</UL>
+<p>
 2009-05-27  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
