@@ -1,3 +1,8 @@
+2009-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/dpx.c (WriteDPXImage): Fix leak of chroma image when
+	subsampling to 4:2:2.
+
 2009-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/utility.c (ExpandFilenames): Input wildcard file
